--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,13 +10,14 @@ services:
     command: --schedule "0 0 23 * * SUN" --cleanup
   portainer:
     container_name: portainer
-    image: portainer/portainer
+    image: portainer/portainer-ce
     ports:
+      - "8000:8000"
       - "9000:9000"
     volumes:
-      - /opt/portainer:/data:rw
+      - /home/pi/docker/portainer/portainer_data:/data:rw
       - /var/run/docker.sock:/var/run/docker.sock
-    restart: "no" # because the exit code(s) are wrong
+    restart: "always" # because the exit code(s) are wrong
   organizr:
     container_name: organizr
     restart: always
